--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 before_script:
   - pip install docker-compose &&
-    docker-compose up 
+    docker-compose up -d
 
 script:
   - docker-compose run app sh -c "python manage.py test && flake8"
